# COT_Utility

./: .gitignore  CMakeLists.txt  COT_Parser.vcxproj  COT_Parser.vcxproj.filters  Examples.cpp  LICENSE  README.txt
COT_Utility/: cot_info.h  cot_utility.cpp  cot_utility.h
cmake/: pugi_xml.cmake  pugixml.cmake
cot_utility/: CMakeLists.txt  cot_info.h  cot_utility.cpp  cot_utility.h
doxygen/: common.doxyfile  project.doxyfile
doxygen/dox/: 00_Mainpage.dox  01_Scope.dox  02_ReferenceDocs.dox  03_PreliminaryDesign.dox  04_DetailDesign.dox  05_Environment.dox  06_AcronymsDefs.dox  Markdown.md
single_include/: cot.hpp
src/COT_Parser/: COT_Parser.sln  COT_Parser.vcxproj  COT_Parser.vcxproj.filters  Examples.cpp  Source.cpp
src/COT_Parser/COTParser/: cotInfo.hpp  cotParser.cpp  cotParser.hpp
src/COT_Parser/COT_Utility/: cot_info.h  cot_utility.h
